# manga-notify

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  \  docker-compose.yaml  mypy.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docker-build-push.yml  py-check.yml  release.yaml
docs/: README_RU.md
docs/deploy/: docker-compose.yaml
manga_notify/: __main__.py  background.py  bot.py  custom.py  dependencies.py  main.py  settings.py  subscription_process.py  tg_utils.py
manga_notify/bot/: __init__.py  auth.py  basic_commands.py  callback_data.py  info_builder.py  mal_search.py  mal_search_flow.py  remind_later.py  router.py  subscription_flow.py
manga_notify/bot/middlewares/: auth.py  deps.py
manga_notify/channels/: channel.py  channel_factory.py  dummy_channel.py  telegram_channel.py
manga_notify/database/: __init__.py  database.py  feed_storage.py  user_pipeline_storage.py  user_storage.py
manga_notify/database/sql/: feed_storage.sql  user_storage.sql
manga_notify/drivers/: animejoy_bs.py  basic_rss.py  chapmanganato_bs.py  common_message.py  driver.py  driver_factory.py  erai_raws_rss.py  mangakakalot_bs.py  mangasee_rss.py  readmanga_rss.py  sovet_romantica_bs.py  weebcentral.py
manga_notify/drivers/mangaplus/: __init__.py  codegen.sh  response.proto  response_pb2.py  response_pb2.pyi
manga_notify/feed_processing/: feed_manager.py  feed_message.py  feed_processor.py  feed_validation.py  parsing_job.py  subscription.py
manga_notify/jobs/: __init__.py  __main__.py  background_parsing.py  mal_linker.py  remind_later.py  send_telegram_message.py
manga_notify/user_pipeline/: factory.py  subscription_pipeline.py  user_pipeline.py  wrapper.py
postgres/migrations/: V001__init.sql  V002__mal_url.sql  V003__updated_at.sql
sql/: 01_add_pipeline.sql  db.sqlite  init.sql
supervisor/: supervisord.conf
tests/: conftest.py  init_env.sh
tests/bot/: test_callback_data.py  test_info_builder.py  test_mal_search.py  test_remind_later.py
tests/drivers/: test_animejoy_bs.py  test_chapmanganato_bs.py  test_erai_raws.py  test_mangaplus.py  test_sovet_romantica_bs.py  test_weebcentral_rss.py
tests/feed_processing/: test_feed_message.py
