[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manga-notify"
dynamic = ["version"]
description = "Tool to get notifications on feeds update"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "isthisloss", email = "kopturovdim@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "aiogram==2.21",
  "aiohttp==3.8.1",
  "arq==0.22",
  "asyncpg==0.26.0",
  "beautifulsoup4==4.10.0",
  "pydantic==1.8.2",
  "python-dotenv==0.19.1",
]

[tool.hatch.version]
path = "manga_notify/__init__.py"

[project.optional-dependencies]
test = [
  "aioresponses==0.7.3",
  "flake8==4.0.1",
  "mypy-extensions==0.4.3",
  "mypy==0.910",
  "pytest==7.1.3",
  "pytest-asyncio==0.19.0",
]
dev = [
  "yandex-pgmigrate==1.0.7",
  "pip-tools==6.9.0",
]

[tool.hatch.build.targets.sdist]
include = [
    "/manga_notify",
]
