[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "manga-notify"
dynamic = ["version"]
description = "Tool to get notifications on feeds update"
readme = "README.md"
license = "MIT"
requires-python = ">=3.6"
authors = [
    { name = "isthisloss", email = "kopturovdim@gmail.com" },
]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
dependencies = [
  "aiogram==3.1.1",
  "aiohttp==3.8.5",
  "aiosql==8.0",
  "arq==0.25",
  "asyncpg==0.27.0",
  "beautifulsoup4==4.12.0",
  "pydantic==2.1.1",
  "python-dotenv==1.0.0",
  "protobuf==4.22.1",
]

[tool.hatch.version]
path = "manga_notify/__init__.py"

[project.optional-dependencies]
test = [
  "aioresponses==0.7.4",
  "flake8==6.0.0",
  "mypy-extensions==1.0.0",
  "mypy==1.3.0",
  "pytest==7.3.1",
  "pytest-asyncio==0.21.0",
]
dev = [
  "types-protobuf==4.22.0.0",
  "mypy-protobuf==3.4.0",
  "yandex-pgmigrate==1.0.7",
  "pip-tools==6.13.0",
]

[tool.hatch.build]
include = [
  "manga_notify/**/*.py",
  "manga_notify/**/*.sql"
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
